Altera o filtro de busca de lista-pedidos

--- a/app/templates/detalhes-pedido.html
+++ b/app/templates/detalhes-pedido.html
@@ -167,7 +167,7 @@
             <span>Rejeitado ❌</span>
         {% elif pedido.status == "exigência" %}
             <span>Com exigência ⚠</span>			
-        {% elif pedido.status == "rejeitado pela agência" %}
+        {% elif pedido.status == "rejeitado_agencia" %}
             <span>Rejeitado pela agência❌</span>	
         {% endif %}
     </div>
