--- a/app/templates/agenciar.html
+++ b/app/templates/agenciar.html
@@ -131,7 +131,7 @@
                     <span>Aprovado ✅ {% if current_user.role == "comum" %}<a href="{{ url_for('pedidos.gerar_comprovante', pedido_id=pedido.id) }}" target="_blank">Ver Comprovante</a>{% endif %}</span>
                 {% elif pedido.status == "rejeitado" %}
                     <span>Rejeitado ❌</span>
-                {% elif pedido.status == "rejeitado pela agência" %}
+                {% elif pedido.status == "rejeitado_agencia" %}
                     <span>Rejeitado pela agência ❌</span>
 				{% elif pedido.status == "exigência" %}
 					<span>Com exigência ⚠</span>							
